# flync

./: .gitattributes  .gitignore  DEPENDENCY_GUIDE.md  Dockerfile  L3_CNS.sh  MANIFEST.in  MIGRATION.md  PACKAGE_STRUCTURE_RECOMMENDATION.md  README.md  README_batch_optimization.md  README_v2.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  SYSTEM_DEPENDENCIES.md  assmbleMod.yml  base-envs.dockerfile  base.dockerfile  batch_optimization.yaml  class-new-transfrags.sh  codMod.yml  coding-prob.sh  conda-env  config.yaml  dea.sh  dgeMod.yml  dlinct  dlinct.bak  dlinct:base.dockerfile  dlinct~parent of ffade55... patch  environment.yml  envs-base-img.dockerfile  filtered_ncRNA_transcripts.gtf  flync  flync_config.yaml  get-features.sh  highlevel-required-tools.txt  infoMod.yml  install-macos.sh  install-ubuntu.sh  install-windows.ps1  (+31 more)
.github/: copilot-instructions.md
.github/workflows/: base-envs-image.yml  (+4 more)
conda-recipe/: meta.yaml
conda-recipe-dge/: meta.yaml
env/: assembleMod.yml  codMod.yml  dgeMod.yml  featureMod.yml  infoMod.yml  mapMod.yml  predictMod.yml
examples/: programmatic_usage.py
final_train_artifacts/: flync_ebm_scaler.pkl
genome/: genome.cdna.fa  genome.fa  genome.fa.fai  genome.lncrna.transOnly.bed  genome.lncrna.transOnly.chr.bed  genome.lncrna.transOnly.gtf  genome.not.lncrna.transOnly.bed  genome.not.lncrna.transOnly.chr.bed  genome.not.lncrna.transOnly.gtf
legacy_scripts/: ballgown.R  build-index.sh  class-new-transfrags.sh  coding-prob.sh  config-local-tracks.py  final-table.py  get-features.sh  get-sra-info.sh  gtf-to-bed.sh  tux2count.sh  tux2map.sh
lncrna/: .gitattributes  CAGE.sort.tsv  CAGE.tsv  CAGE_neg.tsv  CAGE_neg_whole_trans.tsv  CAGE_pos.tsv  GCcont.tsv  H3K4me3_S2.tsv  JASPAR_TF.tsv  Pol2_S2.tsv  ReMap.tsv  X_train_lncrna.csv  X_train_lncrna_2s.csv  paths.txt  phastCons27.tsv  phyloP124.tsv  phyloP27.tsv
lncrna2/: X_train_lncrna_2s.csv
marques2021/: flync_marquess2021_inference_predictions_nb.xlsx  flync_marquess2021_inference_predictions_neuron.xlsx  inference_nb.ipynb  inference_neuron.ipynb  nb-new-transcripts.gtf  neuron-new-transcripts.gtf
model/: X_test.csv  X_train_lncrna.csv  X_train_not_lncrna_2s.csv  model_2s_dataset1.sav  train_true.parquet
not_lncrna/: CAGE_neg.tsv  CAGE_pos.tsv  JASPAR_TF.tsv  RNAfold.tsv  X_train_not_lncrna_2s.csv  paths.csv
notebooks/: autoskl.py  feature-table-predict.ipynb  feature-table-train.ipynb  feature-table-vs2.ipynb  feature-table.ipynb  final-table.ipynb  model-2s-tests.ipynb  model-tests.ipynb  model_metrics_1.csv  predict.ipynb  random-forest.ipynb  rev-tests.ipynb  rf_auc_values.csv  rf_metrics.csv  rf_norm_conf_matrix.csv  rf_pr_auc_values.csv  rf_pr_curves.csv  rf_roc_curves.csv
scripts/: 2s-cons.sh  2s-pred.bak  2s-pred.sh  anime.sh  ballgown.R  build-index.sh  check-links.py  class-new-transfrags.sh  coding-prob.sh  download-tracks.sh  feature-table-2vs.py  feature-table.ipynb  feature-table.py  final-table.py  get-feature-info.bak  get-feature-info.sh  get-features.sh  get-genome.sh  get-sra-info.py  get-sra-info.sh  gtf-to-bed.sh  install-sratoolkit.sh  install-tools.sh  kallisto.bak  kallisto.sh  map-sra-list.bak  map-sra-list.sh  map-stats.bak  map-stats.py  post-process-transcript-assembly.bak  post-process-transcript-assembly.sh  pre-process-mapping-stats.sh  pre-process-sleuth.bak  pre-process-sleuth.sh  predict.py  sleuth.bak  sleuth.r  transcriptome-assembly-cufflinks.sh  transcriptome-assembly.bak  transcriptome-assembly.sh  (+7 more)
static/: required_links.txt  tracksFile.tsv
test/: config.yaml  conftest.py  metadata.csv  test.list  test_aggregate_features.py  test_kmer_persistence.py  test_progress.py
test_get_features/: new-lincRNAs-names.csv  new-lincRNAs.csv
tests/: test_config.py  test_installation.py
vu_gse199164/: flync_vu_gse199164_inference_results.xlsx  inference.ipynb  vu_gse199164.bed  vu_gse199164_dedup.bed
vu_gse199164_3d_vs_7d/: inference.ipynb
wtVSbrat_mock/: metadata_wtVSbrat_Landskron2018.csv  runlist_wtVSbrat_Landskron2018.txt  slurm-3523006.out  wtVSbrat.sh  wtVSbrat_filterOut_blindTest.txt  wtVSbrat_genesToFilter.txt
(+442 files in other folders)
