[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flync"
version = "1.5.9"
description = "FLYNC - FLY Non-Coding gene discovery & classification"
readme = "README.md"
authors = [
    {name = "Ricardo F. dos Santos", email = "ricardo.santos@nms.unl.pt"}
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "snakemake>=7.0",
    "pandas>=1.3",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
flync = "flync.cli:main"

[project.urls]
Homepage = "https://github.com/homemlab/flync"
Repository = "https://github.com/homemlab/flync"
Issues = "https://github.com/homemlab/flync/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flync = ["workflows/*.smk", "workflows/Snakefile"]
