[project]
name = "flync"
version = "1.0.0"
description = "FLYNC: lncRNA discovery pipeline for Drosophila melanogaster"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FLYNC Contributors"}
]
keywords = ["bioinformatics", "lncRNA", "genomics", "machine-learning", "RNA-seq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pyfaidx>=0.7.0",
    "gffutils>=0.12.0",
    "pyranges>=0.0.129",
    "biopython>=1.81",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "optuna>=3.0.0",
    "mlflow>=2.7.0",
    "interpret>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
native = [
    # C-extension packages best installed via conda
    "pyBigWig>=0.3.0",
    "pybedtools>=0.9.0",
]

[project.scripts]
flync = "flync.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"flync.assets" = ["*.model", "*.pkl", "*.json"]
"flync.workflows" = ["Snakefile", "rules/*.smk"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
